fix: fix issue with h1 colour rendering incorecctly in dark mode

--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -44,16 +44,17 @@ h2 {
 	margin-top: 2rem;
 	margin-bottom: 2rem;
 	font-weight: 800;
-	color: var(--cl-foreground-shade);
 }
 
 h1 {
 	font-size: 4rem;
 	letter-spacing: -0.2rem;
+	color: white;
 }
 
 h2 {
 	font-size: 3rem;
+	color: var(--cl-foreground-shade);
 }
 
 h3 {
